# circular-dependency-example

./: .gitignore  README.md  cabal.project  stack.yaml
core/: .ghc.environment.x86_64-darwin-8.6.5  core.cabal
core/src/: Core.hs
core/test/: Spec.hs
util/: util.cabal
util/src/: Arbitrary.hs
