name:           core
version:        0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Core
  other-modules:
      Paths_core
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite unit
  default-language:
      Haskell2010
  build-depends:
      base
    , util
    , core
  type:
      exitcode-stdio-1.0
  other-modules:
  hs-source-dirs:
      test
  main-is:
    Spec.hs
